--- a/default.env
+++ b/default.env
@@ -329,12 +329,13 @@ RETH_DOCKERFILE=Dockerfile.binary
 # staking-deposit-cli
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 DEPCLI_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
-DEPCLI_SRC_REPO=https://github.com/ethereum/staking-deposit-cli
-# Does not (yet?) exist on Docker hub
-DEPCLI_DOCKER_TAG=nonesuch
+DEPCLI_SRC_REPO=https://github.com/eth-educators/ethstaker-deposit-cli
+DEPCLI_DOCKER_TAG=latest
+DEPCLI_DOCKER_REPO=ghcr.io/eth-educators/ethstaker-deposit-cli
+DEPCLI_DOCKERFILE=Dockerfile.binary
 
 # traefik and ddns-updater
-TRAEFIK_TAG=v3.1
+TRAEFIK_TAG=v3.2
 DDNS_TAG=v2
 
 # For the Node Dashboard, define a regex of mount points to ignore for the diskspace check.
@@ -343,4 +344,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=20
+ENV_VERSION=21
