--- a/ethstaker-deposit-cli/Dockerfile.source
+++ b/ethstaker-deposit-cli/Dockerfile.source
@@ -1,19 +1,20 @@
-FROM python:3.10-alpine AS builder
-#FROM python:3.12-alpine AS builder
+FROM python:3.13-bookworm AS builder
 
 ARG BUILD_TARGET
 ARG SRC_REPO
 
+ARG DOCKER_TAG
+ARG DOCKER_REPO
+
 RUN mkdir -p /src
 
-RUN apk add --update bash git
+RUN apt-get update && apt-get install -y bash git
 
 WORKDIR /src
-RUN bash -c "git clone ${SRC_REPO} staking-deposit-cli && cd staking-deposit-cli && git config advice.detachedHead false && git fetch --all --tags \
+RUN bash -c "git clone ${SRC_REPO} ethstaker-deposit-cli && cd ethstaker-deposit-cli && git config advice.detachedHead false && git fetch --all --tags \
   && if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:deposit-pr; git checkout deposit-pr; else git checkout ${BUILD_TARGET}; fi"
 
-FROM python:3.10-alpine
-#FROM python:3.11-alpine
+FROM python:3.13-bookworm
 
 ARG USER=depcli
 ARG UID=1000
@@ -30,17 +31,15 @@ RUN adduser \
 
 WORKDIR /app
 
-COPY --from=builder /src/staking-deposit-cli/requirements.txt /src/staking-deposit-cli/setup.py ./
-COPY --from=builder /src/staking-deposit-cli/staking_deposit ./staking_deposit
+COPY --from=builder /src/ethstaker-deposit-cli/requirements.txt ./
+COPY --from=builder /src/ethstaker-deposit-cli/ethstaker_deposit ./ethstaker_deposit
 
-RUN apk add --update gcc libc-dev linux-headers bash su-exec
+RUN apt-get update && apt-get install -y build-essential bash gosu
 
 RUN pip3 install -r requirements.txt
-
-RUN python3 setup.py install
 
 RUN chown -R ${USER}:${USER} /app
 
 COPY ./docker-entrypoint.sh /usr/local/bin/
 
-ENTRYPOINT [ "docker-entrypoint.sh","python3","./staking_deposit/deposit.py" ]
+ENTRYPOINT [ "python3", "-m", "ethstaker_deposit" ]
