--- a/default.env
+++ b/default.env
@@ -39,6 +39,8 @@ IPV6=false
 ANCIENT_DIR=
 # Password for Lighthouse Siren
 SIREN_PASSWORD=
+# Auth token for EthPandaOps Xatu
+XATU_KEY=
 
 # Promtail logs label, something unique like the server name
 LOGS_LABEL=eth-docker
@@ -204,6 +206,10 @@ ENABLE_DIST_ATTESTATION_AGGR=
 LIDO_DV_EXIT_EXIT_EPOCH=
 LIDO_DV_EXIT_VERSION=
 
+# EthPandaOps Xatu
+XATU_DOCKER_REPO=ethpandaops/xatu
+XATU_DOCKER_TAG=latest
+
 # Commit-Boost
 CB_PBS_DOCKER_TAG=latest
 CB_PBS_DOCKER_REPO=ghcr.io/commit-boost/pbs
@@ -344,4 +350,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=21
+ENV_VERSION=22
