--- a/xatu.yml
+++ b/xatu.yml
@@ -15,6 +15,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     <<: *logging
     command:
+      - sentry
       - --preset
       - ethpandaops
       - --beacon-node-url=${CL_NODE}
