Update source build targets

--- a/default.env
+++ b/default.env
@@ -217,7 +217,7 @@ MEV_DOCKERFILE=Dockerfile.binary
 
 # Nimbus
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
-NIM_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
+NIM_SRC_BUILD_TARGET=stable
 NIM_SRC_REPO=https://github.com/status-im/nimbus-eth2
 NIM_DOCKER_TAG=multiarch-latest
 NIM_DOCKER_VC_TAG=multiarch-latest
@@ -259,7 +259,7 @@ PRYSM_DOCKERFILE=Dockerfile.binary
 
 # Lodestar
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
-LS_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
+LS_SRC_BUILD_TARGET=stable
 LS_SRC_REPO=https://github.com/ChainSafe/lodestar
 LS_DOCKER_TAG=latest
 LS_DOCKER_REPO=chainsafe/lodestar
@@ -320,7 +320,7 @@ NIMEL_DOCKERFILE=Dockerfile.source
 
 # Reth
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
-RETH_SRC_BUILD_TARGET=main
+RETH_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 RETH_SRC_REPO=https://github.com/paradigmxyz/reth
 RETH_DOCKER_TAG=latest
 RETH_DOCKER_REPO=ghcr.io/paradigmxyz/reth
@@ -335,7 +335,7 @@ DEPCLI_DOCKER_REPO=ghcr.io/eth-educators/ethstaker-deposit-cli
 DEPCLI_DOCKERFILE=Dockerfile.binary
 
 # traefik and ddns-updater
-TRAEFIK_TAG=v3.2
+TRAEFIK_TAG=v3.3
 DDNS_TAG=v2
 
 # For the Node Dashboard, define a regex of mount points to ignore for the diskspace check.
