--- a/.github/workflows/build-nimbus-el.yml
+++ b/.github/workflows/build-nimbus-el.yml
@@ -1,22 +1,16 @@
-name: Test Lodestar and Erigon
+name: Source build Nimbus EL
 
 defaults:
   run:
     shell: bash
 
 on:
-  push:
-  pull_request:
-    types: [opened, synchronize, labeled, unlabeled]
-    branches: [main]
+  schedule:
+    - cron: "42 7 * * 2"  # Weekly Tuesday at 7:42 AM UTC
+  workflow_dispatch:
 
 jobs:
-  test-lodestar-erigon:
-    if: |
-      contains(github.event.pull_request.labels.*.name, 'test-lodestar') ||
-      contains(github.event.pull_request.labels.*.name, 'test-erigon') ||
-      contains(github.event.pull_request.labels.*.name, 'test-all') ||
-      github.event_name == 'push'
+  build-nimbus:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -25,21 +19,26 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Create .env file
         run: cp default.env .env
-      - name: Set Lodestar/Erigon
+      - name: Set Nimbus/Nimbus
         run: |
           source ./.github/helper.sh
-          COMPOSE_FILE=lodestar.yml:erigon.yml
+          COMPOSE_FILE=nimbus.yml:nimbus-el.yml
           var=COMPOSE_FILE
           set_value_in_env
           FEE_RECIPIENT=0xDccf8451070a86183eE70D330C4c43b686E9CF86
           var=FEE_RECIPIENT
           set_value_in_env
+          NIMEL_DOCKERFILE=Dockerfile.source
+          var=NIMEL_DOCKERFILE
+          set_value_in_env
+      - name: Build clients
+        run: ./ethd update
       - name: Test the stack
         uses: ./.github/actions/test_client_stack
-      - name: Set Lodestar/Erigon w/ VC
+      - name: Set Nimbus/Nimbus w/ VC
         run: |
           source ./.github/helper.sh
-          COMPOSE_FILE=lodestar-cl-only.yml:lodestar-vc-only.yml:erigon.yml
+          COMPOSE_FILE=nimbus-cl-only.yml:nimbus-vc-only.yml:nimbus-el.yml
           var=COMPOSE_FILE
           set_value_in_env
       - name: Test the stack
