--- a/.github/workflows/test-nimbus-nethermind.yml
+++ b/.github/workflows/test-nimbus-nethermind.yml
@@ -1,5 +1,8 @@
 name: Test Nimbus and Nethermind
-run-name: Test Nimbus and Nethermind
+
+defaults:
+  run:
+    shell: bash
 
 on:
   push:
@@ -31,29 +34,13 @@ jobs:
           FEE_RECIPIENT=0xDccf8451070a86183eE70D330C4c43b686E9CF86
           var=FEE_RECIPIENT
           set_value_in_env
-      - name: Start Nimbus/Nethermind
-        run: ./ethd up
-      - name: Pause for 30 seconds
-        run: sleep 30
-      - name: Test Nimbus CL
-        run: ./.github/check-service.sh consensus
-      - name: Test Nimbus VC
-        run: ./.github/check-service.sh validator
-      - name: Test Nethermind
-        run: ./.github/check-service.sh execution
+      - name: Test the stack
+        uses: ./.github/actions/test_client_stack
       - name: Set Nimbus/Nethermind w/ VC
         run: |
           source ./.github/helper.sh
           COMPOSE_FILE=nimbus-cl-only.yml:nimbus-vc-only.yml:nethermind.yml
           var=COMPOSE_FILE
           set_value_in_env
-      - name: Start Nimbus/Nethermind
-        run: ./ethd up
-      - name: Pause for 30 seconds
-        run: sleep 30
-      - name: Test Nimbus CL
-        run: ./.github/check-service.sh consensus
-      - name: Test Nimbus VC
-        run: ./.github/check-service.sh validator
-      - name: Test Nethermind
-        run: ./.github/check-service.sh execution
+      - name: Test the stack
+        uses: ./.github/actions/test_client_stack
