Fix build name redux

--- a/.github/workflows/build-deposit.yml
+++ b/.github/workflows/build-deposit.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-besu:
+  build-deposit-cli:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
