Improve buttacha.in stats comment

--- a/default.env
+++ b/default.env
@@ -75,7 +75,8 @@ CL_MIN_PEER_COUNT=
 # Maximum active peers for EL.
 EL_MAX_PEER_COUNT=
 
-# Beaconcha.in API key for sending client stats. Automatic for Lodestar, Lighthouse, and Teku, or with prysm-stats.yml / nimbus-stats.yml
+# Beaconcha.in API key for sending client stats. Automatic for Lodestar, Lighthouse, Teku and Grandine,
+# or with prysm-stats.yml / nimbus-stats.yml - caveat that the -stats.yml don't send validator data.
 # Specify as just the API key as found at https://beaconcha.in/user/settings#api, and give the machine name separately
 BEACON_STATS_API=
 BEACON_STATS_MACHINE=
