docs: Update contributoor.yml and default.env configurations

--- a/contributoor.yml
+++ b/contributoor.yml
@@ -16,6 +16,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     <<: *logging
     command:
+      - --network=${NETWORK}
       - --beacon-node-url=${CL_NODE}
       - --username=${CONTRIBUTOOR_USERNAME}
       - --password=${CONTRIBUTOOR_PASSWORD}
