--- a/default.env
+++ b/default.env
@@ -42,9 +42,9 @@ SIREN_PASSWORD=
 # Auth token for EthPandaOps Xatu
 XATU_KEY=
 # EthPandaOps Contributoor Username
-CONTRIBUTOOR_USERNAME
+CONTRIBUTOOR_USERNAME=
 # EthPandaOps Contributoor Password
-CONTRIBUTOOR_PASSWORD
+CONTRIBUTOOR_PASSWORD=
 
 # Promtail logs label, something unique like the server name
 LOGS_LABEL=eth-docker
