feat: Add ethPandaOps Contributoor (#2033)
* feat: Add ethPandaOps Contributoor

* docs: Update contributoor.yml and default.env configurations

* fix: Update beacon node URL parameter name

* fix: Update service command in contributoor.yml

--- a/default.env
+++ b/default.env
@@ -41,6 +41,10 @@ ANCIENT_DIR=
 SIREN_PASSWORD=
 # Auth token for EthPandaOps Xatu
 XATU_KEY=
+# EthPandaOps Contributoor Username
+CONTRIBUTOOR_USERNAME=
+# EthPandaOps Contributoor Password
+CONTRIBUTOOR_PASSWORD=
 
 # Promtail logs label, something unique like the server name
 LOGS_LABEL=eth-docker
@@ -211,6 +215,10 @@ LIDO_DV_EXIT_VERSION=
 XATU_DOCKER_REPO=ethpandaops/xatu
 XATU_DOCKER_TAG=latest
 
+# EthPandaOps Contributoor
+CONTRIBUTOOR_DOCKER_REPO=ethpandaops/contributoor
+CONTRIBUTOOR_DOCKER_TAG=latest
+
 # Commit-Boost
 CB_PBS_DOCKER_TAG=latest
 CB_PBS_DOCKER_REPO=ghcr.io/commit-boost/pbs
@@ -351,4 +359,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=22
+ENV_VERSION=23
