--- a/default.env
+++ b/default.env
@@ -121,7 +121,7 @@ EL_RPC_PORT=8545
 EL_WS_PORT=8546
 # Erigon's torrent port. Don't make this 42070, as it will fail
 ERIGON_TORRENT_PORT=42069
-# Erigon's third P2P port, used for multiple eth/xx P2P protocols
+# Erigon's third P2P port
 ERIGON_P2P_PORT_3=30305
 # SSV Node ports
 SSV_P2P_PORT=13001
