rename ERIGON_P2P_PORT_2 -> EL_P2P_PORT_2 (#2034)
* rename ERIGON_P2P_PORT_2 -> EL_P2P_PORT_2

* Update default.env

* old var to new var migration

---------

Co-authored-by: yorickdowne <71337066+yorickdowne@users.noreply.github.com>

--- a/default.env
+++ b/default.env
@@ -94,6 +94,8 @@ OBOL_P2P_RELAYS=
 # P2P ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
 EL_P2P_PORT=30303
+# second EL P2P port used by Erigon and Reth
+EL_P2P_PORT_2=30304
 CL_P2P_PORT=9000
 PRYSM_PORT=9000
 PRYSM_UDP_PORT=9000
@@ -121,8 +123,7 @@ EL_RPC_PORT=8545
 EL_WS_PORT=8546
 # Erigon's torrent port. Don't make this 42070, as it will fail
 ERIGON_TORRENT_PORT=42069
-# Erigon's second and third P2P port, used for multiple eth/xx P2P protocols
-ERIGON_P2P_PORT_2=30304
+# Erigon's third P2P port
 ERIGON_P2P_PORT_3=30305
 # SSV Node ports
 SSV_P2P_PORT=13001
