--- a/default.env
+++ b/default.env
@@ -158,6 +158,8 @@ LODESTAR_HEAP=
 # and EL. Caution that this may a) require a fresh sync and b) will
 # use a lot of disk - in the case of Geth >12TB, for example.
 ARCHIVE_NODE=false
+# Set this to true to sync a node that does not carry all historical data, see EIP-4444
+MINIMAL_NODE=true
 
 # If you want debug logs, set this to debug instead of info
 LOG_LEVEL=info
@@ -354,4 +356,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=23
+ENV_VERSION=24
