--- a/grandine-cl-only.yml
+++ b/grandine-cl-only.yml
@@ -44,6 +44,7 @@ services:
       - GRAFFITI=
       - DEFAULT_GRAFFITI=true
       - ARCHIVE_NODE=${ARCHIVE_NODE:-false}
+      - MINIMAL_NODE=${MINIMAL_NODE:-true}
       - IPV6=${IPV6:-false}
       - CL_P2P_PORT=${CL_P2P_PORT:-9000}
       - CL_QUIC_PORT=${CL_QUIC_PORT:-9001}
