Add SSV Pulse benchmark

--- a/ssv-config/config-sample.yaml
+++ b/ssv-config/config-sample.yaml
@@ -17,6 +17,7 @@ eth2:
 eth1:
   ETH1Addr: ws://execution:8546
 MetricsAPIPort: 15000
+SSVAPIPort: 16000
 global:
   LogFormat: json
   LogLevelFormat: lowercase
