Add SSV Pulse benchmark (#2044)

--- a/default.env
+++ b/default.env
@@ -184,8 +184,8 @@ VC_ALIAS=vc
 OBOL_CHARON_CL_ENDPOINTS=http://consensus:5052
 # Consensus client address for Lido DV Exit and Lido Validator Ejector services in Obol setup
 OBOL_CL_NODE=http://consensus:5052
-# Execution client address (RPC) for Lido Validator Ejector in Obol setup
-OBOL_EL_NODE=http://execution:8545
+# Execution client address (RPC) for Lido Validator Ejector in Obol setup, and SSV pulse
+EL_RPC_NODE=http://execution:8545
 
 # You can set specific version targets and choose binary or compiled from source builds below,
 # via "Dockerfile.binary" or "Dockerfile.source"
@@ -200,7 +200,7 @@ ETH_DOCKER_TAG=
 SSV_NODE_TAG=latest
 SSV_NODE_REPO=ssvlabs/ssv-node
 SSV_DKG_TAG=latest
-SSV_DKG_REPO=bloxstaking/ssv-dkg
+SSV_DKG_REPO=ssvlabs/ssv-dkg
 
 # Lido OBOL
 CHARON_VERSION=latest
@@ -356,4 +356,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=24
+ENV_VERSION=25
