Support SSV-DKG 3.x

--- a/ssv-config/dkg-config-sample.yaml
+++ b/ssv-config/dkg-config-sample.yaml
@@ -1,9 +1,10 @@
-privKey: /config/encrypted_private_key.json
-privKeyPassword: /config/password.pass
+privKey: ./config/encrypted_private_key.json
+privKeyPassword: ./config/password.pass
 operatorID: <YOUR_OPERATOR_ID>
 port: 3030
 logLevel: info
 logFormat: json
 logLevelFormat: capitalColor
-logFilePath: /output/debug.log
-outputPath: /output
+logFilePath: ./output/debug.log
+outputPath: ./output
+ethEndpointURL: http://execution:8545
