--- a/default.env
+++ b/default.env
@@ -157,11 +157,16 @@ TEKU_HEAP=
 # If left empty, the default in lodestar.yml will be used.
 LODESTAR_HEAP=
 
-# Set this to true to sync an archive node instead of pruned for both CL
-# and EL. Caution that this may a) require a fresh sync and b) will
+# Set this to true to sync an execution layer archive node instead of pruned
+# Caution that this may a) require a fresh sync and b) will
 # use a lot of disk - in the case of Geth >12TB, for example.
-ARCHIVE_NODE=false
+EL_ARCHIVE_NODE=false
+# Set this to true to sync a consensus layer archive node instead of pruned
+# This may also keep all blobs, depending on client
+# For a more granular way to handle it, please use CL_EXTRAS instead
+CL_ARCHIVE_NODE=false
 # Set this to true to sync a node that does not carry all historical data, see EIP-4444
+# EL_ARCHIVE_NODE must be false for this to take effect
 MINIMAL_NODE=true
 
 # If you want debug logs, set this to debug instead of info
@@ -359,4 +364,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=26
+ENV_VERSION=27
