--- a/default.env
+++ b/default.env
@@ -39,10 +39,10 @@ IPV6=false
 ANCIENT_DIR=
 # Password for Lighthouse Siren
 SIREN_PASSWORD=
-# EthPandaOps Contributoor Username
-CONTRIBUTOOR_USERNAME=
-# EthPandaOps Contributoor Password
-CONTRIBUTOOR_PASSWORD=
+# EthPandaOps Contributor Username
+CONTRIBUTOR_USERNAME=
+# EthPandaOps Contributor Password
+CONTRIBUTOR_PASSWORD=
 
 # Promtail logs label, something unique like the server name
 LOGS_LABEL=eth-docker
@@ -220,9 +220,9 @@ ENABLE_DIST_ATTESTATION_AGGR=
 LIDO_DV_EXIT_EXIT_EPOCH=
 LIDO_DV_EXIT_VERSION=
 
-# EthPandaOps Contributoor
-CONTRIBUTOOR_DOCKER_REPO=ethpandaops/contributoor
-CONTRIBUTOOR_DOCKER_TAG=latest
+# EthPandaOps Contributor
+CONTRIBUTOR_DOCKER_REPO=ethpandaops/contributor
+CONTRIBUTOR_DOCKER_TAG=latest
 
 # Commit-Boost
 CB_PBS_DOCKER_TAG=latest
