CI build --non-interactive to avoid screen

--- a/.github/workflows/build-besu.yml
+++ b/.github/workflows/build-besu.yml
@@ -32,7 +32,7 @@ jobs:
           var=BESU_DOCKERFILE
           set_value_in_env
       - name: Build clients
-        run: ./ethd update
+        run: ./ethd update --non-interactive
       - name: Test the stack
         uses: ./.github/actions/test_client_stack
       - name: Set Teku/Besu w/ VC
