--- a/.github/workflows/build-geth.yml
+++ b/.github/workflows/build-geth.yml
@@ -35,7 +35,7 @@ jobs:
           var=GETH_DOCKERFILE
           set_value_in_env
       - name: Build clients
-        run: ./ethd update
+        run: ./ethd update --non-interactive
       - name: Test the stack
         uses: ./.github/actions/test_client_stack
       - name: Set Prysm/Geth w/ VC
