--- a/.github/workflows/build-nimbus.yml
+++ b/.github/workflows/build-nimbus.yml
@@ -32,7 +32,7 @@ jobs:
           var=NIM_DOCKERFILE
           set_value_in_env
       - name: Build clients
-        run: ./ethd update
+        run: ./ethd update --non-interactive
       - name: Start Nimbus/Nethermind
         run: ./ethd up
       - name: Pause for 30 seconds
