--- a/.github/workflows/build-reth.yml
+++ b/.github/workflows/build-reth.yml
@@ -29,7 +29,7 @@ jobs:
           var=RETH_DOCKERFILE
           set_value_in_env
       - name: Build clients
-        run: ./ethd update
+        run: ./ethd update --non-interactive
       - name: Test the stack
         uses: ./.github/actions/test_client_stack
       - name: Set Lighthouse/Reth w/ VC
