Add Vero validator client

--- a/default.env
+++ b/default.env
@@ -293,6 +293,14 @@ GRANDINE_DOCKER_TAG=stable
 GRANDINE_DOCKER_REPO=sifrai/grandine
 GRANDINE_DOCKERFILE=Dockerfile.binary
 
+# Vero
+# SRC build target can be a tag, a branch, or a pr as "pr-ID"
+VERO_SRC_BUILD_TARGET=master
+VERO_SRC_REPO=https://github.com/serenita-org/vero
+VERO_DOCKER_TAG=latest
+VERO_DOCKER_REPO=ghcr.io/serenita-org/vero
+VERO_DOCKERFILE=Dockerfile.binary
+
 # Web3Signer
 W3S_DOCKER_TAG=latest
 W3S_DOCKER_REPO=consensys/web3signer
@@ -364,4 +372,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=27
+ENV_VERSION=28
