--- a/teku/Dockerfile.source
+++ b/teku/Dockerfile.source
@@ -31,6 +31,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
   tzdata \
   git \
   adduser \
+  libjemalloc-dev \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
