--- a/default.env
+++ b/default.env
@@ -23,7 +23,7 @@ DEFAULT_GRAFFITI=true
 NETWORK=holesky
 # CL rapid sync via initial state/checkpoint. Please use one from https://eth-clients.github.io/checkpoint-sync-endpoints/
 # Alternatively, use an already synced CL that you trust. No trailing / for Teku, please.
-RAPID_SYNC_URL=https://holesky.beaconstate.info
+CHECKPOINT_SYNC_URL=https://holesky.beaconstate.info
 # Doppelganger protection - set to "true" to enable. This will intentionally skip two epochs on client start, and attempt to
 # detect duplicates of the validator(s) already running. Note this is NOT foolproof, though it can be useful when moving a node
 DOPPELGANGER=false
@@ -372,4 +372,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=28
+ENV_VERSION=29
