--- a/erigon.yml
+++ b/erigon.yml
@@ -32,7 +32,7 @@ services:
       - COMPOSE_FILE=${COMPOSE_FILE}
       - CL_P2P_PORT=${CL_P2P_PORT:-9000}
       - CL_REST_PORT=${CL_REST_PORT:-5052}
-      - RAPID_SYNC_URL=${RAPID_SYNC_URL:-}
+      - CHECKPOINT_SYNC_URL=${CHECKPOINT_SYNC_URL:-}
       - MEV_BOOST=${MEV_BOOST:-false}
       - MEV_NODE=${MEV_NODE:-}
     volumes:
