--- a/teku.yml
+++ b/teku.yml
@@ -30,7 +30,7 @@ services:
       - jwtsecret:/var/lib/teku/ee-secret
     environment:
       - JAVA_OPTS=${TEKU_HEAP:--Xmx7g}
-      - RAPID_SYNC_URL=${RAPID_SYNC_URL}
+      - CHECKPOINT_SYNC_URL=${CHECKPOINT_SYNC_URL}
       - JWT_SECRET=${JWT_SECRET}
       - MEV_BOOST=${MEV_BOOST}
       - MEV_NODE=${MEV_NODE}
