--- a/besu/Dockerfile.binary
+++ b/besu/Dockerfile.binary
@@ -17,7 +17,7 @@ USER root
 RUN groupmod -g "${GID}" besu && usermod -u "${UID}" -g "${GID}" besu
 
 RUN set -eux; \
-        apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates tzdata git wget; \
+        apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates tzdata git git-lfs wget; \
         rm -rf /var/lib/apt/lists/*; \
 # verify that the binary works
         gosu nobody true
