--- a/besu/Dockerfile.source
+++ b/besu/Dockerfile.source
@@ -27,6 +27,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
   gosu \
   libjemalloc-dev \
   git \
+  git-lfs \
   wget \
   adduser \
   && apt-get clean \
