--- a/erigon/Dockerfile.binary
+++ b/erigon/Dockerfile.binary
@@ -19,6 +19,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
   tzdata \
   gosu \
   git \
+  git-lfs \
   jq \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
