--- a/erigon/Dockerfile.source
+++ b/erigon/Dockerfile.source
@@ -25,6 +25,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
   tzdata \
   gosu \
   git \
+  git-lfs \
   jq \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
