--- a/geth/Dockerfile.source
+++ b/geth/Dockerfile.source
@@ -23,7 +23,7 @@ ARG UID=10001
 # GID 10002 is deliberate so it can exchange secret with CL
 ARG GID=10002
 
-RUN apk add --no-cache ca-certificates tzdata bash su-exec git jq
+RUN apk add --no-cache ca-certificates tzdata bash su-exec git git-lfs jq
 
 RUN addgroup \
     --gid "${GID}" \
