--- a/grandine/Dockerfile.binary
+++ b/grandine/Dockerfile.binary
@@ -22,7 +22,7 @@ RUN adduser \
 
 RUN set -eux; \
         apt-get update; \
-        DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates bash tzdata git curl; \
+        DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates bash tzdata git git-lfs curl; \
         rm -rf /var/lib/apt/lists/*; \
 # verify that the binary works
         gosu nobody true
