--- a/grandine/Dockerfile.source
+++ b/grandine/Dockerfile.source
@@ -32,6 +32,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
   ca-certificates \
   tzdata \
   git \
+  git-lfs \
   curl \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
