--- a/lighthouse/Dockerfile.source
+++ b/lighthouse/Dockerfile.source
@@ -30,6 +30,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
   wget \
   tzdata \
   git \
+  git-lfs \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 # rsync for migration
