--- a/lodestar/Dockerfile.source
+++ b/lodestar/Dockerfile.source
@@ -18,7 +18,7 @@ RUN bash -c "cd .. && rm -rf app && git clone ${SRC_REPO} app && cd app && git c
 
 FROM node:22-slim
 
-RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates tzdata bash gosu git wget \
+RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates tzdata bash gosu git git-lfs wget \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 ARG USER=lsconsensus
