--- a/nethermind/Dockerfile.binary
+++ b/nethermind/Dockerfile.binary
@@ -14,7 +14,7 @@ ARG GID=10002
 
 RUN set -eux; \
 	apt-get update; \
-	DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y ca-certificates gosu tzdata wget git adduser; \
+	DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y ca-certificates gosu tzdata wget git git-lfs adduser; \
 	rm -rf /var/lib/apt/lists/*; \
 # verify that the binary works
         gosu nobody true
