--- a/nimbus/Dockerfile.binary
+++ b/nimbus/Dockerfile.binary
@@ -18,7 +18,7 @@ RUN groupmod -g "${UID}" ${USER} && usermod -u "${UID}" -g "${UID}" ${USER}
 
 RUN set -eux; \
         apt-get update; \
-        DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates bash tzdata git curl; \
+        DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates bash tzdata git git-lfs curl; \
         rm -rf /var/lib/apt/lists/*; \
 # verify that the binary works
         gosu nobody true
