--- a/reth/Dockerfile.binary
+++ b/reth/Dockerfile.binary
@@ -15,6 +15,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
   tzdata \
   gosu \
   git \
+  git-lfs \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
