--- a/reth/Dockerfile.source
+++ b/reth/Dockerfile.source
@@ -27,6 +27,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
   tzdata \
   gosu \
   git \
+  git-lfs \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
