--- a/teku/Dockerfile.binary
+++ b/teku/Dockerfile.binary
@@ -16,7 +16,7 @@ RUN groupmod -g "${UID}" ${USER} && usermod -u "${UID}" -g "${UID}" ${USER}
 
 RUN set -eux; \
         apt-get update; \
-        DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates tzdata git libjemalloc-dev; \
+        DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates tzdata git git-lfs libjemalloc-dev; \
         rm -rf /var/lib/apt/lists/*; \
 # verify that the binary works
         gosu nobody true
