--- a/grandine-allin1.yml
+++ b/grandine-allin1.yml
@@ -42,6 +42,7 @@ services:
       - GRAFFITI=${GRAFFITI:-}
       - DEFAULT_GRAFFITI=${DEFAULT_GRAFFITI:-false}
       - WEB3SIGNER=${WEB3SIGNER:-false}
+      - W3S_NODE=${W3S_NODE}
       - DOPPELGANGER=${DOPPELGANGER:-false}
       - ARCHIVE_NODE=${CL_ARCHIVE_NODE:-false}
       - MINIMAL_NODE=${MINIMAL_NODE:-true}
@@ -141,6 +142,7 @@ services:
       - KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD:-}
       - KEY_API_PORT=${KEY_API_PORT:-7500}
       - WEB3SIGNER=${WEB3SIGNER:-false}
+      - W3S_NODE=${W3S_NODE}
       - CL_NODE=${CL_NODE}
     depends_on:
       - consensus
