Split CL and EL minimal node

--- a/default.env
+++ b/default.env
@@ -165,9 +165,12 @@ EL_ARCHIVE_NODE=false
 # This may also keep all blobs, depending on client
 # For a more granular way to handle it, please use CL_EXTRAS instead
 CL_ARCHIVE_NODE=false
+# Set this to true to sync a minimal CL node - in use with Grandine and Teku, for example
+# CL_ARCHIVE_NODE must be false for this to take effect
+CL_MINIMAL_NODE=true
 # Set this to true to sync a node that does not carry all historical data, see EIP-4444
 # EL_ARCHIVE_NODE must be false for this to take effect
-MINIMAL_NODE=true
+EL_MINIMAL_NODE=false
 
 # If you want debug logs, set this to debug instead of info
 LOG_LEVEL=info
@@ -369,4 +372,4 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 DOCKER_ROOT=/var/lib/docker
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=29
+ENV_VERSION=30
